--- a/Connect4/package.json
+++ b/Connect4/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@stomp/stompjs": "^6.0.0",
+    "net": "^1.0.2",
     "rxjs": "~6.6.0",
+    "sockjs": "^0.3.21",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
